[gd_scene load_steps=2 format=3 uid="uid://cxnwvpw6ma8gv"]

[ext_resource type="Script" uid="uid://cqbiol1b575xu" path="res://scenes/ui/hud/game_hud.gd" id="1_6l4od"]

[node name="GameHUD" type="Control"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_6l4od")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -41.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ActionPanel" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="IdleButton" type="Button" parent="MarginContainer/HBoxContainer/ActionPanel"]
layout_mode = 2
text = "Idle"

[node name="AttackButton" type="Button" parent="MarginContainer/HBoxContainer/ActionPanel"]
layout_mode = 2
text = "Attack"

[node name="CaptureButton" type="Button" parent="MarginContainer/HBoxContainer/ActionPanel"]
layout_mode = 2
text = "Capture"

[node name="MergeButton" type="Button" parent="MarginContainer/HBoxContainer/ActionPanel"]
layout_mode = 2
text = "Merge"

[node name="MainPanel" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = 30

[node name="CancelButton" type="Button" parent="MarginContainer/HBoxContainer/MainPanel"]
layout_mode = 2
size_flags_horizontal = 0
text = "Cancel"

[node name="EndTurnButton" type="Button" parent="MarginContainer/HBoxContainer/MainPanel"]
layout_mode = 2
text = "End turn"
